[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flux-query-builder"
version = "1.0.0"
description = "A python querybuilder for the Flux query language"
readme = "README.md"
authors = [{ name = "Nico Kraetschmer", email = "kraetschmerni@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: Apache 2.0 License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["flux", "influxdb", "influx","utility", "querybuilder", "query", "builder", "influx-query-builder", "flux-query-builder"]
dependencies = [
    "dateparser >= 1.1.7",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["freezegun"]

[project.urls]
Homepage = "https://github.com/realpython/reader"
