[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flux-query-builder"
version = "1.0.0"
description = "A python querybuilder for the Flux query language"
readme = "README.md"
authors = [{ name = "Nico Kraetschmer", email = "kraetschmerni@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["flux", "influxdb", "influx","utility", "querybuilder", "query", "builder", "influx-query-builder", "flux-query-builder"]
dependencies = [
    "dateparser >= 1.1.7",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["freezegun"]

[project.urls]
Homepage = "https://github.com/Loeffeldude/flux_query_builder"

[tool.bumpver]
current_version = "1.0.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "Bump version {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
		'version = "{version}"'
]
"flux_query_builder/__init__.py" = ["{version}"]
"README.md" = [
    "{version}",
]

